--- a/app/styles/home-page.scss
+++ b/app/styles/home-page.scss
@@ -55,10 +55,12 @@ $content-detail-height-mobile: 220vw;
             background:url(/assets/images/button-be-membership.png);
             background-size:100%; 
             background-repeat: no-repeat;
+            outline: none;
 
             &:hover {
                 transform:scale(1.1,1.1);
                 transition: transform 0.1s, width 0.1s ease-in;
+                outline: none;
             }
            
            a {
