update content and css community-benefits-container

--- a/app/styles/community-benefits-container.scss
+++ b/app/styles/community-benefits-container.scss
@@ -111,10 +111,12 @@
             background:url(/assets/images/button-benefits-make-part.png);
             background-size:100%; 
             background-repeat: no-repeat;*/
+            outline: none;
 
             &:hover {
                 transform:scale(1.1,1.1);
                 transition: transform 0.1s, width 0.1s ease-in;
+                outline: none;
             }
            
            a {
@@ -137,10 +139,12 @@
             background:url(/assets/images/button-benefits-know-plans.png);
             background-size:100%; 
             background-repeat: no-repeat;*/
+            outline: none;
 
             &:hover {
                 transform:scale(1.1,1.1);
                 transition: transform 0.1s, width 0.1s ease-in;
+                outline: none;
             }
            
            a {
