update content and css work-space

--- a/app/styles/work-space-types-spaces-container.scss
+++ b/app/styles/work-space-types-spaces-container.scss
@@ -178,6 +178,7 @@ $item-width: 25vw;
                     align-items: left;
                     background-size: cover;
                     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 0px 0px 0 rgba(0, 0, 0, 0.2);
+                    outline: none;
                     h1 {
                         margin-top:-22%;
                         margin-left: -2vw;
