--- a/app/templates/components/work-space/work-space-types-spaces-container.hbs
+++ b/app/templates/components/work-space/work-space-types-spaces-container.hbs
@@ -3,7 +3,7 @@
     {{work-space.work-space-type-spaces-content-item 
         titleImageSrc="/assets/images/work_space_title_house.png" 
         headerImageSrc="/assets/images/work-space-house.jpg"
-        description="Foi inspirada nas empresas do Vale do Silício e projetada para atender startups e outras concepções disruptivas voltadas para a inovação. O ambiente +55Lab.House é considerado ideal para empresas da economia criativa e colaborativa e, também, para aquelas que buscam instalações mais despojadas. Trabalhar sentado à beira da piscina ou na área de descompressão torna o bate-papo mais descontraído e, assim, criam o ambiente ideal para o surgimento espontâneo de novas ideias."  
+        description="Foi inspirada nas empresas do Vale do Silício e projetada para atender startups e outras concepções disruptivas voltadas para a inovação. O ambiente +55Lab.House é considerado ideal para empresas da economia criativa e colaborativa e, também, para aquelas que buscam instalações mais despojadas. Trabalhar sentado à beira da piscina ou na área de descompressão torna o bate-papo mais descontraído e cria o ambiente ideal para o surgimento espontâneo de novas ideias."  
         buttonImageSrc="/assets/images/work_space_button_house.png"
         buttonActiveImageSrc="/assets/images/work_space_button_house_activated.png"
         backgroundFilterHoverSrc="/assets/images/workspace-option-background-image-filter-selected-green.png"
