--- a/app/styles/community-benefits-container.scss
+++ b/app/styles/community-benefits-container.scss
@@ -274,10 +274,12 @@
             background:url(/assets/images/button-benefits-make-part.png);
             background-size:100%; 
             background-repeat: no-repeat;
+            outline: none;
 
             &:hover {
                 transform:scale(1.1,1.1);
                 transition: transform 0.1s, width 0.1s ease-in;
+                outline: none;
             }
            
            a {
@@ -300,10 +302,12 @@
             background:url(/assets/images/button-benefits-know-plans.png);
             background-size:100%; 
             background-repeat: no-repeat;
+            outline: none;
 
             &:hover {
                 transform:scale(1.1,1.1);
                 transition: transform 0.1s, width 0.1s ease-in;
+                outline: none;
             }
            
            a {
@@ -454,10 +458,12 @@
             text-align: center;
             align-items: center;
             align-content: center;
+            outline: none;
 
             &:hover {
                 transform:scale(1.1,1.1);
                 transition: transform 0.1s, width 0.1s ease-in;
+                outline: none;
             }
            
            a {
@@ -491,10 +497,12 @@
             background-repeat: no-repeat;
             margin-left: auto;
             margin-right: auto;
+            outline: none;
 
             &:hover {
                 transform:scale(1.1,1.1);
                 transition: transform 0.1s, width 0.1s ease-in;
+                outline: none;
             }
            
            a {
