--- a/app/styles/work-space-plans-description-container.scss
+++ b/app/styles/work-space-plans-description-container.scss
@@ -67,10 +67,12 @@
             flex-wrap: wrap;
             justify-content: center;
             font-family: 'BebasNeue-Bold';
+            outline: none;
 
             &:hover {
             transform:scale(1.1,1.1);
              transition: transform 0.1s, width 0.1s ease-in;
+             outline: none;
            }
            &:visited, &:link {
               color: white;
