--- a/app/styles/work-space-types-spaces-container.scss
+++ b/app/styles/work-space-types-spaces-container.scss
@@ -282,6 +282,7 @@ $item-width: 25vw;
                     background-size: cover;
                     padding-bottom: 10%;
                     margin-left: -7%;
+                    outline: none;
                     h1 {
                         margin-top:-24%;
                         margin-left: -5vw;
