update buttons table in work-space

--- a/app/styles/work-space-plans-content-item.scss
+++ b/app/styles/work-space-plans-content-item.scss
@@ -390,6 +390,7 @@
                 font-family: 'BebasNeue-Bold';
                 margin-left: -10%;
                 position: absolute;
+                color: white;
                 
                 &:visited, &:link {
                     color: white;
