--- a/app/templates/components/work-space/work-space-types-spaces-container.hbs
+++ b/app/templates/components/work-space/work-space-types-spaces-container.hbs
@@ -3,7 +3,7 @@
     {{work-space.work-space-type-spaces-content-item 
         titleImageSrc="/assets/images/work_space_title_house.png" 
         headerImageSrc="/assets/images/work-space-house.jpg"
-        description="Foi inspirada nas empresas do Vale do Silício e projetada para atender startups e outras concepções disruptivas voltadas para a inovação. O ambiente +55Lab.House é considerado ideal para empresas da economia criativa e colaborativa e, também, para aquelas que buscam instalações mais despojadas. Trabalhar sentado à beira da piscina ou na área de descompressão torna o bate-papo mais descontraído e cria o ambiente ideal para o surgimento espontâneo de novas ideias."  
+        description="Foi inspirada nas empresas do Vale do Silício e projetada para atender startups e outras concepções disruptivas voltadas para inovação. O ambiente +55Lab.House é considerado ideal para empresas da economia criativa e colaborativa e também para aquelas que buscam instalações mais despojadas. Trabalhar sentado à beira da piscina ou na área de descompressão torna o bate-papo mais descontraído e cria o ambiente ideal para o surgimento espontâneo de novas ideias."  
         buttonImageSrc="/assets/images/work_space_button_house.png"
         buttonActiveImageSrc="/assets/images/work_space_button_house_activated.png"
         backgroundFilterHoverSrc="/assets/images/workspace-option-background-image-filter-selected-green.png"
@@ -16,7 +16,7 @@
     {{work-space.work-space-type-spaces-content-item 
         titleImageSrc="/assets/images/work_space_title_store.png" 
         headerImageSrc="/assets/images/work-space-store.jpg"
-        description="Este ambiente foi planejado pensando em quem precisa comercializar produtos diferenciados. O +55Lab.Store é uma combinação de showroom, co-kitchen e espaço de trabalho e de experiências. Aqui é o ecossistema ideal para os empreendedores da economia criativa e do empreendedorismo de lifestyle. Tá afim de expor o seu trabalho ou produtos do seu e-commerce? Ta precisando de um espaço para trabalhar ou promover um evento? O .Store com certeza é o que você está procurando." 
+        description="Este ambiente foi planejado pensando em quem precisa comercializar produtos diferenciados. O +55Lab.Store é uma combinação de showroom, co-kitchen e espaço de trabalho e experiências. Aqui é o ecossistema ideal para empreendedores da economia criativa e do empreendedorismo de lifestyle. Tá afim de expor seu trabalho ou produtos do seu e-commerce? Tá precisando de um espaço descolado para trabalhar ou promover um evento? O .Store com certeza é o que você está procurando." 
         buttonImageSrc="/assets/images/work_space_button_store.png"
         buttonActiveImageSrc="/assets/images/work_space_button_store_activated.png"
         backgroundFilterHoverSrc="/assets/images/workspace-option-background-image-filter-selected-yellow.png"
@@ -30,7 +30,7 @@
     {{work-space.work-space-type-spaces-content-item 
         titleImageSrc="/assets/images/work_space_title_work.png" 
         headerImageSrc="/assets/images/work-space-work.jpg"
-        description="Desenhado com foco em produtividade, estilo, flexibilidade e compartilhamento, o espaço +55Lab.Work possui estações de trabalho individuais, salas privativas e para grupos, salas de reuniões e conferências, espaços para eventos e suporte em serviços administrativos. O +55Lab.Work é uma ótima opção para empresas que estão entrando no mercado local e querem estar nos centros comerciais de suas cidades - são instalações mais clássicas e formatadas para o meio corporativo."
+        description="Espaços de trabalho desenhados com foco em produtividade, estilo, flexibilidade e compartilhamento. De estações de trabalho individuais a salas privativas para times maiores que 10 pessoas, salas de reuniões e eventos, suporte de serviços administrativos, o +55Lab.Work atende aqueles que buscam flexibilidade, conforto e possibilidade de focar 100% no próprio negócio.Uma ótima opção para empresas que estão entrando no mercado local e querem estar nos centros empresariais de suas cidades."
         buttonImageSrc="/assets/images/work_space_button_work.png"
          buttonActiveImageSrc="/assets/images/work_space_button_work_activated.png"
         backgroundFilterHoverSrc="/assets/images/workspace-option-background-image-filter-selected-pink.png"
