update content in work-space

--- a/app/templates/components/work-space/work-space-advantage-container.hbs
+++ b/app/templates/components/work-space/work-space-advantage-container.hbs
@@ -14,7 +14,7 @@
 
 {{/if}}
 
-{{#if contentObject.contentSecondObjectOneTable}}
+<!-- {{#if contentObject.contentSecondObjectOneTable}}
         <div class="advantage-container-do-it">
 
         <img src="{{contentObject.contentSecondObjectOneTable.image}}" class="image">
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </div>
-{{/if}}
+{{/if}} -->
 
 {{#if contentObject.contentObjectDoubleTable}}
         
@@ -97,7 +97,7 @@
                         <h1>{{contentObject.contentObjectDoubleTable.descriptionActionButton}}</h1>
                     </div>
 
-                   <button class="advantage-access-here-button" style = "background:url(/assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;" >{{#link-to "sign-up-membership" target="_blank"}}{{contentObject.contentObjectDoubleTable.titleActionButton}}{{/link-to}}</button>
+                   <button class="advantage-access-here-button" style = "background:url(/assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;" >{{#link-to "visit-us" target="_blank"}}{{contentObject.contentObjectDoubleTable.titleActionButton}}{{/link-to}}</button>
 
                    <div class="advantage-access-here-button-background-borders">
                    </div>
@@ -116,7 +116,7 @@
                         <h1>{{contentObject.contentObjectDoubleTable.descriptionActionButton}}</h1>
                     </div>
 
-                   <button class="advantage-access-here-button" style = "background:url(/assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;" >{{#link-to "sign-up-membership" target="_blank"}}{{contentObject.contentObjectDoubleTable.titleActionButton}}{{/link-to}}</button>
+                   <button class="advantage-access-here-button" style = "background:url(/assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;" >{{#link-to "visit-us" target="_blank"}}{{contentObject.contentObjectDoubleTable.titleActionButton}}{{/link-to}}</button>
 
                    <div class="advantage-access-here-button-background-borders">
                    </div>
@@ -157,7 +157,7 @@
         </div>
     </div>
     
-         <div class="advantage-support-container">
+         <!-- <div class="advantage-support-container">
 
             <div class="advantage-support-title">
                 <h1>{{contentObject.contentObjectOneTable.titleTable}}</h1>
@@ -182,7 +182,7 @@
                 <div class="advantage-space-center-line-two">
                 </div>
             </div>
-        </div>
+        </div> -->
 {{/if}}
 
 
@@ -201,7 +201,7 @@
             <h3>{{contentObject.contentObjectSecondTable.secondSubsubtitle}}</h3>
             <h2><b>{{contentObject.contentObjectSecondTable.firstTitlePriceSubsubtitle}}</b>{{contentObject.contentObjectSecondTable.firstPriceSecondSubsubtitle}}</h2>
             <h2><b>{{contentObject.contentObjectSecondTable.secondTitlePriceSubsubtitle}}</b>{{contentObject.contentObjectSecondTable.secondPriceSecondSubsubtitle}}</h2>
-            <h3>{{contentObject.contentObjectTwoTable.description}}</h3>
+            <h3>{{contentObject.contentObjectSecondTable.description}}</h3>
         </div>
 
         <div class="advantage-meeting-room-background">
@@ -237,6 +237,7 @@
             <h3>{{contentObject.contentObjectThirdTable.thirdSubsubtitle}}</h3>
             <h2><b>{{contentObject.contentObjectThirdTable.firstTitlePriceSubsubtitle}}</b>{{contentObject.contentObjectThirdTable.firstPriceThirdSubsubtitle}}</h2>
             <h2><b>{{contentObject.contentObjectThirdTable.secondTitlePriceSubsubtitle}}</b>{{contentObject.contentObjectThirdTable.secondPriceThirdSubsubtitle}}</h2>
+            <h3>{{contentObject.contentObjectThirdTable.description}}</h3>
         </div>
 
         <div class="advantage-meeting-room-background">
@@ -253,7 +254,7 @@
 
 {{/if}}
 
-{{#if contentObject.contentObjectThirdTable.itensTable}}
+<!-- {{#if contentObject.contentObjectThirdTable.itensTable}}
             
       <div class="advantage-support-container">
 
@@ -281,7 +282,7 @@
                 </div>
             </div>
         </div>
-{{/if}}
+{{/if}} -->
 
 {{#if contentObject.contentObjectWithoutTable}}
             
