update links in page and back after click in alert

--- a/app/templates/components/community/community-benefits-container.hbs
+++ b/app/templates/components/community/community-benefits-container.hbs
@@ -70,7 +70,7 @@
 
     <div class="actions-container">
            <button class="action-button-first">
-               {{#link-to "sign-up-membership" target="_blank"}}{{contentMainObject.firstButton}}{{/link-to}}
+               {{#link-to "sign-up-membership"}}{{contentMainObject.firstButton}}{{/link-to}}
             </button>
                 <button class="action-button-second">
                 {{#link-to "work-space"}}{{contentMainObject.secondButton}}{{/link-to}}
