--- a/app/templates/components/home/home-page-component.hbs
+++ b/app/templates/components/home/home-page-component.hbs
@@ -7,7 +7,7 @@
   <h1> {{contentObject.mainPhraseTitle}} </h1>
   <h2> {{contentObject.mainPhraseDescription}} </h2>
     <button class="action-button-membership">
-      {{#link-to "sign-up-membership" target="_blank"}}{{contentObject.mainTitleButton}}{{/link-to}}
+      {{#link-to "sign-up-membership" }}{{contentObject.mainTitleButton}}{{/link-to}}
     </button>
 </div>
 
