--- a/app/templates/components/top-bar/top-bar.hbs
+++ b/app/templates/components/top-bar/top-bar.hbs
@@ -1,11 +1,11 @@
 <div class="navbar" style={{this.style}}>
-  
+
   <div class="close-menu"  {{action this.closeMenuAction}}>
      MENU
     <button class="burger-menu"> </button>
-     
+
     </div>
-  
+
   <div class="app-logo">
      {{#link-to "home-page"}}{{/link-to}}
   </div>
@@ -23,11 +23,12 @@
     </div>
   </div>
   {{/if}}
-   
+
   <div class="app-menu">
-    <!--<div class="nav-button">
-       {{#link-to "blog"}}Blog{{/link-to}} 
-    </div>-->
+    <div class="nav-button">
+       <a target="_blank" href="http://55lab.blog/">Blog</a>
+    </div>
+  
     <div class="nav-button">
       {{#link-to "visit-us"}}Nos Visite{{/link-to}}
     </div>
